--- a/ankur-collapse.html
+++ b/ankur-collapse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LADDi008</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -82,7 +82,7 @@ height: 130vh; background-position: center;background-size: cover;   }
     <div class="nav dpn">
         <div class="col-xs-12 bg-dark navbar  navbar-dark fixed-top ">
             <div class="col-md-3 b ps-5"><img  width="100vw" src="pic/Logo_White_Vector.png"></div>
-            <div class=" col-md-9  d-flex flex-nowrap  py-4 text-white b">
+            <div class=" col-md-9  d-flex flex-nowrap   text-white b">
                 <li class=" dropdown">
                     <li type="button" class="dropdown-toggle px-3" data-bs-toggle="dropdown">Courses</li>
                     <ul class="dropdown-menu">
