--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ height: 130vh; background-position: center;background-size: cover;   }
 .sig{padding-left:0px ;}
 .do-epic .btn:hover{background-color: black;  color: yellow;}
 
-.do-epic2{padding-left:15vh;padding-top:15vh}
+
 .do-epic2 .btn:hover{background-color: black;  color: yellow;}
 
 
@@ -368,7 +368,7 @@ height: 130vh; background-position: center;background-size: cover;   }
 </div>
 
 
-<div class="row px-5 py-5  b"> 
+<div class="row px-5 py-5 do-epic2  b"> 
 
     <div class="col-xs-12 col-sm-6 ">
         <h1 class="display-1"><b>GET EPIC SHIT DONE</b></h1>
