--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ height: 130vh; background-position: center;background-size: cover;   }
         </div>
     </div>
 
-    <div class="col-xs-12 text-center bg-dark pt-3 b "><p class="p-3 text-bg-dark">Copyright Zaan Webveda Private Limited | All Rights Reserved || Designed by <a href="#" class="text-decoration-none">Gur.</a> </p></div>
+    <div class="row text-center bg-dark pt-3 b "><p class="p-3 text-bg-dark">Copyright Zaan Webveda Private Limited | All Rights Reserved || Designed by <a href="#" class="text-decoration-none">Gur.</a> </p></div>
 
 </body>
 </html>
