--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ height: 130vh; background-position: center;background-size: cover;   }
 <body>
 
     <div class="nav dpn">
-        <div class="col-xs-12 bg-dark navbar  navbar-dark fixed-top ">
+         <div class="row bg-dark   navbar-dark fixed-top b">
             <div class="col-md-3 b ps-5"><img  width="100vw" src="pic/Logo_White_Vector.png"></div>
-            <div class=" col-md-9  d-flex flex-nowrap   text-white b">
+            <div class=" col-md-9  d-flex flex-nowrap align-items-center  text-white b">
                 <li class=" dropdown">
                     <li type="button" class="dropdown-toggle px-3" data-bs-toggle="dropdown">Courses</li>
                     <ul class="dropdown-menu">
