--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ height: 130vh; background-position: center;background-size: cover;   }
 
     </div>
 
-    <nav class="col-12 navbar nav2  navbar-expand-lg bg-dark navbar-dark b">
+    <nav class="col-12 navbar nav2 px-2  navbar-expand-lg bg-dark navbar-dark b">
         
           <a class="navbar-brand" href="#"><img  width="100vw" src="pic/Logo_White_Vector.png"></div></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
